Refactor: Mapper strategy for each layer #8