@@ -1,14 +1,32 @@
 package org.certis.studyplatform.member.infrastructure.mapper;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.certis.studyplatform.member.domain.Member;
 import org.certis.studyplatform.member.domain.vo.*;
 import org.certis.studyplatform.member.infrastructure.persistence.entity.MemberEntity;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
+import java.util.List;
 
+/**
+ * @deprecated 이 클래스는 더 이상 사용되지 않습니다.
+ * 대신 다음 매퍼들을 사용하세요:
+ * - {@link DomainToEntityMapper}: Domain Entity → JPA Entity 변환
+ * - {@link EntityToDomainMapper}: JPA Entity → Domain Entity 변환
+ * 
+ * Clean Architecture 원칙에 따라 단일 책임 원칙을 적용하여 매퍼를 분리했습니다.
+ */
+@Deprecated(since = "1.0", forRemoval = true)
 @Component
+@RequiredArgsConstructor
+@Slf4j
 public class MemberMapper {
+
+    private final ObjectMapper objectMapper;
 
     // =================================================================
     // Public Methods
@@ -16,7 +34,10 @@ public class MemberMapper {
 
     /**
      * Domain Member -> MemberEntity 변환 (메인 메서드)
+     * 
+     * @deprecated {@link DomainToEntityMapper#toMemberEntity(Member)} 사용
      */
+    @Deprecated
     public MemberEntity toEntity(Member member) {
         if (member == null) {
             return null;
@@ -39,7 +60,10 @@ public class MemberMapper {
 
     /**
      * MemberEntity -> Domain Member 변환 (메인 메서드)
+     * 
+     * @deprecated {@link EntityToDomainMapper#toMember(MemberEntity)} 사용
      */
+    @Deprecated
     public Member toDomain(MemberEntity entity) {
         if (entity == null) {
             return null;
@@ -60,9 +84,78 @@ public class MemberMapper {
         );
     }
 
+    /**
+     * 데이터베이스에서 조회된 skills 데이터를 파싱
+     *
+     * @param skillsData 데이터베이스의 skills 컬럼 데이터 (JSON 배열 또는 String 배열)
+     * @return 파싱된 기술 스택 리스트
+     * 
+     * @deprecated {@link EntityToDomainMapper#parseSkillsFromDatabase(Object)} 사용
+     */
+    @Deprecated
+    public List<String> parseSkillsFromDatabase(Object skillsData) {
+        if (skillsData == null) {
+            return List.of();
+        }
+
+        try {
+            // String 배열인 경우
+            if (skillsData instanceof String[]) {
+                return Arrays.asList((String[]) skillsData);
+            }
+
+            // JSON 문자열인 경우
+            if (skillsData instanceof String) {
+                String jsonString = (String) skillsData;
+                if (jsonString.trim().isEmpty() || "null".equals(jsonString)) {
+                    return List.of();
+                }
+
+                // JSON 배열 파싱
+                List<String> skills = objectMapper.readValue(jsonString, new TypeReference<List<String>>() {});
+                return skills != null ? skills : List.of();
+            }
+
+            // PostgreSQL 배열인 경우
+            if (skillsData instanceof String && ((String) skillsData).startsWith("{")) {
+                return parsePostgreSQLArray((String) skillsData);
+            }
+
+            // 콤마로 구분된 문자열인 경우
+            if (skillsData instanceof String) {
+                return parseCommaSeparatedString((String) skillsData);
+            }
+
+            log.warn("지원하지 않는 skills 데이터 타입: {}", skillsData.getClass().getSimpleName());
+            return List.of();
+
+        } catch (Exception e) {
+            log.error("skills 데이터 파싱 중 오류 발생: {}", e.getMessage(), e);
+            return List.of();
+        }
+    }
+
+    /**
+     * 기술 스택을 데이터베이스 저장용 JSON으로 직렬화
+     * 
+     * @deprecated {@link DomainToEntityMapper#serializeSkillsForDatabase(List)} 사용
+     */
+    @Deprecated
+    public String serializeSkillsForDatabase(List<String> skills) {
+        if (skills == null || skills.isEmpty()) {
+            return "[]";
+        }
+
+        try {
+            return objectMapper.writeValueAsString(skills);
+        } catch (Exception e) {
+            log.error("기술 스택 직렬화 중 오류 발생: {}", e.getMessage(), e);
+            return "[]";
+        }
+    }
 
     // =================================================================
-    // Private Helper Methods: Domain -> Entity
+    // Private Helper Methods
     // =================================================================
 
     private String mapNameVoToString(NameVo nameVo) {
@@ -91,14 +184,12 @@ public class MemberMapper {
 
     private String[] mapSkillsVoToStringArray(SkillsVo skillsVo) {
         if (skillsVo == null || skillsVo.values() == null) {
-            return null;
+            return new String[0];
         }
-        return skillsVo.values().toArray(new String[0]);
-    }
 
-    // =================================================================
-    // Private Helper Methods: Entity -> Domain
-    // =================================================================
+        List<String> skillsList = skillsVo.values();
+        return skillsList.toArray(new String[0]);
+    }
 
     private NameVo mapStringToNameVo(String name) {
         return name != null ? NameVo.of(name) : null;
@@ -124,14 +215,49 @@ public class MemberMapper {
         return major != null ? MajorVo.of(major) : null;
     }
 
-    /**
-     * Entity의 String 배열을 SkillsVo로 변환합니다.
-     * 배열이 비어있거나 null이면, SkillsVo의 '비어있을 수 없다'는 도메인 규칙을 준수하기 위해 null을 반환합니다.
-     */
     private SkillsVo mapStringArrayToSkillsVo(String[] skills) {
         if (skills == null || skills.length == 0) {
-            return null;
+            return new SkillsVo(List.of());
         }
-        return SkillsVo.of(Arrays.asList(skills));
+
+        List<String> skillsList = Arrays.asList(skills);
+        return new SkillsVo(skillsList);
+    }
+
+    private List<String> parsePostgreSQLArray(String pgArray) {
+        if (pgArray == null || pgArray.trim().isEmpty()) {
+            return List.of();
+        }
+
+        // PostgreSQL 배열 형식: {item1,item2,item3}
+        String content = pgArray.substring(1, pgArray.length() - 1);
+        if (content.trim().isEmpty()) {
+            return List.of();
+        }
+
+        return Arrays.stream(content.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .toList();
+    }
+
+    private List<String> parseJsonArray(String jsonArray) {
+        try {
+            return objectMapper.readValue(jsonArray, new TypeReference<List<String>>() {});
+        } catch (Exception e) {
+            log.error("JSON 배열 파싱 중 오류 발생: {}", e.getMessage(), e);
+            return List.of();
+        }
+    }
+
+    private List<String> parseCommaSeparatedString(String csvString) {
+        if (csvString == null || csvString.trim().isEmpty()) {
+            return List.of();
+        }
+
+        return Arrays.stream(csvString.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .toList();
     }
 }
